added nav section

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bangladesh 2.0</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
     <header>
-
+      <nav class="max-width">
+        <div class="nav-title">
+          <h1>Bangladesh 2.0</h1>
+        </div>
+        <div class="nav-button">
+          <button class="btn">Sign In</button>
+        </div>
+      </nav>
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
