added banner section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
           <button class="btn">Sign In</button>
         </div>
       </nav>
+      
+      <!-- banner  -->
+      <section class="banner max-width">
+        <div class="banner-content">
+            <div class="subtitle">
+                <p>Bangladesh 2.0</p> 
+            </div>
+            <div class="title">
+                <h1>Idea , innovation ,<br>
+                vision and challenges in<br> New Bangladesh.</h1>
+            </div>
+
+            
+            <div class="banner-btn">
+                <button class="btn">
+                    Explore New Bangladesh
+                </button>
+            </div>
+        </div>
+        <div class="banner-img">
+            <img src="assets/hero.png" alt="hero">
+        </div>
+      </section>
     </header>
 
     <main></main>
