--- a/index.html
+++ b/index.html
@@ -16,32 +16,102 @@
           <button class="btn">Sign In</button>
         </div>
       </nav>
-      
+
       <!-- banner  -->
       <section class="banner max-width">
         <div class="banner-content">
-            <div class="subtitle">
-                <p>Bangladesh 2.0</p> 
-            </div>
-            <div class="title">
-                <h1>Idea , innovation ,<br>
-                vision and challenges in<br> New Bangladesh.</h1>
-            </div>
+          <div class="subtitle">
+            <p>Bangladesh 2.0</p>
+          </div>
+          <div class="title">
+            <h1>
+              Idea , innovation ,<br />
+              vision and challenges in<br />
+              New Bangladesh.
+            </h1>
+          </div>
 
-            
-            <div class="banner-btn">
-                <button class="btn">
-                    Explore New Bangladesh
-                </button>
-            </div>
+          <div class="banner-btn">
+            <button class="btn">Explore New Bangladesh</button>
+          </div>
         </div>
         <div class="banner-img">
-            <img src="assets/hero.png" alt="hero">
+          <img src="assets/hero.png" alt="hero" />
         </div>
       </section>
     </header>
 
-    <main></main>
+    <main>
+      <!-- Future section  -->
+      <section class="future max-width">
+        <div class="future-title">
+          <h1>The Vision of Future</h1>
+        </div>
+        <div class="future-description">
+          <p>
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure, the country is set to
+            become a global model of development.
+          </p>
+        </div>
+        <div class="box">
+          <div class="cards bg-blue">
+            <div class="card-img">
+              <img src="assets/card-icon.png" alt="card-icon" />
+            </div>
+            <div class="card-title">
+              <h3>Digital Transformation</h3>
+            </div>
+            <div class="card-description">
+              <p>
+                Creating a nationwide digital ecosystem to<br />enhance
+                connectivity and access to services for<br />
+                all citizens.
+              </p>
+            </div>
+            <div class="card-btn">
+              <button class="btn">Learn More</button>
+            </div>
+          </div>
+          <div class="cards bg-green">
+            <div class="card-img">
+              <img src="assets/card-icon.png" alt="card-icon" />
+            </div>
+            <div class="card-title">
+              <h3>Green Energy</h3>
+            </div>
+            <div class="card-description">
+              <p>
+                Investments in solar and wind energy to <br />ensure a
+                sustainable and eco-friendly <br />future.
+              </p>
+            </div>
+            <div class="card-btn">
+              <button class="btn">Learn More</button>
+            </div>
+          </div>
+          <div class="cards bg-yellow">
+            <div class="card-img">
+              <img src="assets/card-icon.png" alt="card-icon" />
+            </div>
+            <div class="card-title">
+              <h3>Modern Infrastructure</h3>
+            </div>
+            <div class="card-description">
+              <p>
+                Building state-of-the-art infrastructure to support economic
+                growth and global competitiveness.
+              </p>
+            </div>
+            <div class="card-btn">
+              <button class="btn">Learn More</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
