--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
                 </div>
             </div>
         </div>
+
+        <!-- card2 -->
+        <div class="card2">
+            <div class="card2-content">
+                <div class="card1-title">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                </div>
+                <div class="news-logo">
+                    <img src="assets/al-jazeera.png" alt="al-jazeera">
+                </div>
+                <div class="date-time">
+                    <p>Date: 05/01/2025  <span> Time: 10.25 PM</span></p>
+                </div>
+                <div class="news-description">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                </div>
+                <div class="news-btn">
+                    <button class="btn">Read Me</button>
+                </div>
+            </div>
+            <div class="card2-img">
+                <img src="assets/satelite.png" alt="satelite">
+            </div>
+        </div>
       </section>
     </main>
 
