added donate section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,39 @@
             </div>
         </div>
       </section>
+
+      <!-- Donate  -->
+       <section class="donate max-width">
+        <div class="donate-title">
+          <h1>Donate Today</h1>
+        </div>
+        <div class="donate-description">
+          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        </div>
+        <div class="money-details">
+          <div class="money-box1">
+            <h2>100 Taka</h2>
+          </div>
+          <div class="money-box2">
+            <h2>200 Taka</h2>
+          </div>
+          <div class="money-box3">
+            <h2>500 Taka</h2>
+          </div>
+          <div class="money-box4">
+            <h2>1000 Taka</h2>
+          </div>
+        </div>
+        <div class="other-amount">
+          <input type="text" name="Other Amount (Taka)" id="text" placeholder="Other Amount (Taka)">
+        </div>
+        <hr>
+        <div class="donate-button">
+          <button class="donate-btn">Done Now</button>
+        </div>
+       </section>
+
+       
     </main>
 
     <footer></footer>
