--- a/index.html
+++ b/index.html
@@ -200,6 +200,24 @@
         </div>
        </section>
 
+       <section class="newsletter max-width">
+        <div class="newsletter-title">
+          <h1>Subscribe Newsletter</h1>
+        </div>
+        <div class="newletter-subtitle">
+          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+        </div>
+        <div class="news-form">
+          <form>
+            <input type="email" name="email" id="email" placeholder="Enter your Email">
+            <button class="subscribe-btn">
+              Subscribe
+            </button>
+          </form>
+    
+        </div>
+        <p>We promise not to spam you!</p>
+       </section>
        
     </main>
 
